--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 :root {
-    --background-colour: #ffecd1;
+    --page-white: #ffecd1;
     --ink-black: #001524;
     --grey: #58A4B0;
     --light-grey: rgba(88, 164, 176, 0.4);
     --arrow-colour: #ffecd1;
     --arrow-border: #001524;
     --outline: #058ed9;
+    --error: #92140c;
 }
 
 @font-face {
@@ -18,11 +19,10 @@
     src: url("../fonts/Mayin\'s\ Hand.ttf")
 }
 
-
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     max-height: min-content;
-    background-color: var(--background-colour);
+    background-color: var(--page-white);
     color: var(--ink-black);
     font-family: scribble;
     font-size: 2rem;
@@ -107,8 +107,8 @@ body {
 
 .signup-block {
     width: 60%;
-    background-color: var(--background-colour);
-    gap: 1rem;
+    background-color: var(--page-white);
+    gap: 0.75rem;
 }
 
 .signup-pitch {
@@ -116,30 +116,40 @@ body {
 }
 
 .signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 70%;
     background-color: var(--light-grey);
 }
 
 form {
-    min-width: 10rem;
-    max-width: 28.75rem;
+    width: 70%;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 0.25rem;
 }
 
 .form-row {
     position: relative;
+    width: 100%;
+    line-height: 0.5rem;
 }
 
 .form-row input {
     width: 100%;
+    height: 3rem;
     background: none;
     font-family: scribble-data;
     font-size: 1.5rem;
     border: none;
     border-bottom: 1px solid var(--ink-black);
+}
+
+.form-row input[type="password"] {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .form-row label {
@@ -148,7 +158,7 @@ form {
     font-size: 1rem;
     pointer-events: none;
     left: 0.5rem;
-    top: 0.5rem;
+    top: 0;
     transition: 1s ease all;
 }
 
@@ -164,7 +174,22 @@ input:focus {
     color: var(--grey)
 }
 
+.error {
+    width: 100%;
+    padding: 0;
+    font-size: 0.8rem;
+    color: var(--page-white);
+    background-color: var(--error);
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: 0 0.5rem;
+}
+
 button {
+    width: fit-content;
     left: 1.5rem;
     bottom: 2rem;
     background: none;
@@ -188,7 +213,7 @@ button:hover {
     }
     50% {
         fill: var(--button-fill-2);
-        transform: translateY(2rem);
+        transform: translateY(.5rem);
     }
     100% {
         fill: var(--button-fill);
